# GenericContainer

./: .gitignore  .gitmodules  CMakeInstall.txt  CMakeLists-cflags.txt  CMakeLists-lua.txt  CMakeLists.txt  CMakeUtilities.txt  LICENSE.md  License.txt  README.md  README.rst  Rakefile  Rakefile_common.rb  Rakefile_conf.rb  makefile
GenericContainer.xcodeproj/: project.pbxproj
Xcode-cmake/: CMakeCache.txt  cmake_install.cmake
Xcode-cmake/CMakeScripts/: ReRunCMake.make
Xcode-cmake/GenericContainer.xcodeproj/: project.pbxproj
doc_generate/: Doxyfile_custom  Makefile  conf.py  index.md  index_CPP.md  logo.graffle
docs/: .buildinfo  LICENSE.html  annotated.html  annotated_dup.js  api_c.html  api_cpp.html  api_json.html  author.html  classes.html  dir_1c909b588356f5c595c69e7be779b25d.html  dir_1c909b588356f5c595c69e7be779b25d.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_987541604d344e416d174d664aa7d2e6.html  dir_987541604d344e416d174d664aa7d2e6.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_c.html  functions_d.html  functions_dup.js  functions_e.html  functions_f.html  functions_func.html  functions_func.js  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_i.html  functions_func_l.html  functions_func_m.html  functions_func_n.html  functions_func_o.html  functions_func_p.html  functions_func_r.html  functions_func_s.html  (+55 more)
docs/_sources/: api_json.rst.txt  index.rst.txt  manual.rst.txt  usage.md.txt
docs/api-c/: .buildinfo  class_view_hierarchy.html  dir_GenericContainer.html  dir__Users_enrico_Ricerca_develop_C++_pins-mechatronix_LibSources_submodules_GC_src.html  file_GenericContainerCinterface.cc.html  file_GenericContainerCinterface.h.html  file_GenericContainer_GenericContainerCinterface.h.html  file__Users_enrico_Ricerca_develop_C++_pins-mechatronix_LibSources_submodules_GC_src_GenericContainerCinterface.h.html  file_view_hierarchy.html  function__generic_container_cinterface_8h_1a012a68fbc9d9f41277b1e378cb919945.html  function__generic_container_cinterface_8h_1a03d27836197f659543705b56e7ee5b94.html  function__generic_container_cinterface_8h_1a0970c098632ead4d47aacff7ead0bdf1.html  function__generic_container_cinterface_8h_1a0a465cc772c7a07527931c288c780093.html  function__generic_container_cinterface_8h_1a1019bb258d6c3559f9550df17e8ee519.html  function__generic_container_cinterface_8h_1a1157758699b3af448fbe4f7086bcb332.html  function__generic_container_cinterface_8h_1a145c4dbf28b8d28470f569cb35ad9024.html  function__generic_container_cinterface_8h_1a160ea1a512b763aa6581d6ee5b16d835.html  function__generic_container_cinterface_8h_1a168a7fb8aef6c7ed28502b664296b623.html  function__generic_container_cinterface_8h_1a1a65d824f528f9d3ed6b7a3e07dea638.html  function__generic_container_cinterface_8h_1a2017a52e27e37c2ec0ef06f15ebd3d7e.html  function__generic_container_cinterface_8h_1a241ff5bd60ecb3a6df4d3317aafa027b.html  function__generic_container_cinterface_8h_1a28186cbadc6c3221441e55aa99a56bc2.html  function__generic_container_cinterface_8h_1a2aba8801dff66148b42d9cca0045a19a.html  function__generic_container_cinterface_8h_1a42d27e5e0eed1125021eb001175daac5.html  function__generic_container_cinterface_8h_1a446e5e057707b59033f27ddcfb8a99ac.html  function__generic_container_cinterface_8h_1a498f11e73a6744d1361918c756ad2cdd.html  function__generic_container_cinterface_8h_1a4ca661dde1efb1e7daffe72068ed06c6.html  function__generic_container_cinterface_8h_1a4f2d146b707e27102e8cc3b775de9b9c.html  function__generic_container_cinterface_8h_1a500e4630417332cdab4f9960177a3fe9.html  function__generic_container_cinterface_8h_1a52c72fb4c658b564ab85b186b7589280.html  function__generic_container_cinterface_8h_1a580b30b6b2cd870df70a7d63a4d1f90e.html  function__generic_container_cinterface_8h_1a59d484ae54ce67d3b2fd028ac1db90a4.html  (+184 more)
docs_build/: Makefile  Manual.md  project_common.py
doxygen/: DoxygenLayout.xml  GC.xcf  Makefile  doxyfile_GC  group_json.hh  group_lua.hh  group_yaml.hh  header.html  main.hh  usage.hh  usage.md
examples/: a.yaml  data.json  data.yml  data2.json  data2.yaml  example01.cc  example02.cc  example03.cc  example04.cc  example05.cc  example06.c  example07.cc  example07_data.txt  example08.cc  example09.cc  example10.cc  example11.cc  example12.cc  example13.cc  example14.cc  example15.cc  example16.cc  example17.cc  example18.cc  example4.cc  example6.c  example8.cc  settings.toml  test.json  test.toml  test.yml  test1.yml  test2.yml  test3.yml  test_all.cc
include/: GenericContainer.hh
src/: GenericContainer.cc  GenericContainer.hh  GenericContainerCinterface.cc  GenericContainerCinterface.h  GenericContainerCollapse.cc  GenericContainerExplorer.cc  GenericContainerIJSON.cc  GenericContainerIYAML.cc  GenericContainerInterface_C.cc  GenericContainerPromote.cc  GenericContainerSerialize.cc  GenericContainerSupport.cc  GenericContainerTables.cc  GenericContainerToJSON.cc
src_json_interface/: GenericContainerJson.cc  GenericContainerJson.hh  GenericContainerJsonHandler.cc  GenericContainerJsonHandler.hh  GenericContainerJsonOLD.cc  JSON-test.cc  from_json.cc  from_json2.cc  jsonLexer.cc  jsonParser.tab.cc  jsonParser.tab.hh  jsonParser.yy  location.hh  rapidjson_license.txt  readme.txt  to_json.cc
src_json_interface/test_json_parser/: CMakeLists.txt  jsonLexer.cc  jsonLexer.hh  main.cc
src_lua_interface/: GenericContainerInterface_lua.cc  GenericContainerLuaInterface.cc  GenericContainerLuaInterface.hh  GenericContainerLuaPmain.cc  example_lua3.cc  makefile
src_matlab_interface/: Compile.m  GenericContainerInterface_matlab.cc  GenericContainerMatlabInterface.cc  GenericContainerMatlabInterface.hh  mex_print_recursive.cc  mex_test_gc.cc
src_ruby_interface/: GenericContainer_ffi.rb  testGenericContainer.rb
src_toml_interface/: from_toml.cc  to_toml.cc
src_yaml_interface/: GenericContainerYaml.cc  from_yaml.cc  to_yaml.cc
(+1783 files in other folders)
